# 7z-assembly

./: .gitignore  CMakeLists.txt  package-lock.json  readme.md
.github/workflows/: deploy-docs.yml
docs/: beginning.md  how-to-compile.md  index.md  infrastructure.md  plugin-api-def.md  plugin-api-extract-callback.md  plugin-api-inarc.md  plugin-api-open-callback.md  plugin-api-outarc.md  plugin-api-update-callback.md  plugin-system.md  sz-impl.md  sze-impl.md
docs/.vitepress/: config.mts
src/: 7z-assembly.cc  7z-assembly.cpp  7z-assembly.h  utils.cc  utils.h
src/archive/: sz-archive.cc  sz-archive.h  sze-archive.cc  sze-archive.h  sze-reader.h
src/hashers/: hashers.cc  hashers.h
src/plugin/: 7zTypes.h  Export.h  IArchive.h  IDecl.h  IProgress.h  IStream.h  LibExport.h  MyCom.h  MyTypes.h  PropID.h
test/: 7z-assembly.test.cc
